--- a/QuizMaster/PAGINA/preguntas.html
+++ b/QuizMaster/PAGINA/preguntas.html
@@ -4,46 +4,48 @@
 <head>
   <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-firestore-compat.js"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="script/sj/juego.js"></script>
-  <script src="script/sj/conf.js"></script>
-  <script src="script/sj/base.js"></script>
-  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script src="script/sj/scriptjuego.js"></script>
+  <title>GAME</title>
 </head>
 
 <body>
-
-  <button id="ov-btn-grow-ellipse" onclick="cerrarSesion()">
-    <i class='bx bx-exit'>Salir</i>
+  <button class="ov-btn-grow-ellipse" id="regresarLobby">
+    Volver
   </button>
 
-
-  <div id="usuario">Nombre de Usuario</div>
-
-
-  <div id="mainContainer">
-    <!-- Sidebar con categorías -->
-
-
-    <!-- Marco central para niveles de dificultad y juego -->
-    <div id="centerFrame">
-
-      <div id="juego">
-        <div id="preguntaContainer">
-          <h2 id="pregunta"></h2>
-          <div id="respuestas"></div>
-        </div>
-      </div>
-
-    </div>
-
+  <div id="usuario" class="name-player"></div>
+  <div id="totalFichas" class="fichasplayer">
+    <img src="/Lobby/img/dolar.png" alt="" height="30">
+    <p id="fichas-cantidad"> </p>
+    <button id="add-fichas" type="button" class="btn btn-success">+</button>
   </div>
 
-
+  <div id="centerFrame">
+    <div id="juego">
+      <div class="vidas-container">
+        <img src="imagenes/corazon.jpg" alt="Corazón" class="corazon">
+        Vidas:<span id="vidas">3</span>
+      </div>
+      <div id="preguntaContainer">
+        <h2 id="pregunta"></h2>
+        <div id="respuestas"></div>
+        <div class="progress-container">
+          <div class="progress">
+            <progress id="progress" max="100" value="0"></progress>
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 
 </html>
