--- a/Lobby/index.html
+++ b/Lobby/index.html
@@ -38,10 +38,8 @@
 	<button class="audButton" id="toggleButton"><img id="controller-aud" src="/Lobby/img/volume-full-regular-24.png"
 			alt=""></button>
 	<div class="contenedor">
-
-		<div class="contenedor">
+		<div class="contenedores">
 			<h1>QUIZ MASTER</h1>
-
 			<div class="contenedor-botones">
 				<button class="boton uno" id="Historia">
 					<div class="icono">
@@ -103,17 +101,13 @@
 					</div>
 					<span>BIOLOGIA</span>
 				</button>
-				<button class="boton siete" id="Randon">
-					<div class="icono">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-arrow-right-short" viewBox="0 0 16 16">
-							<path fill-rule="evenodd"
-								d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
-						</svg>
-					</div>
-					<span>Modo Aleatorio</span>
-				</button>
+				
 			</div>
+		</div>
+		<div class="modorandom">
+			<button class="boton siete" id="Randon">
+				<span>Modo aleatorio</span>
+			</button>
 		</div>
 		<div id="modal" class="modal">
 			<div class="modal-contenido">
