--- a/Control/Sugerencias/sugerencias.html
+++ b/Control/Sugerencias/sugerencias.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Preguntas</title>
+    <title> Sugerencias Preguntas</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center">
