--- a/Lobby/index.html
+++ b/Lobby/index.html
@@ -34,6 +34,11 @@
 			<i class="bx">Sugerencia Pregunta</i>
 		</button>
 	</div>
+	<div class="punteo">
+		<button class="ran" id="rankingPoint">
+			<i class="bs">Ranking</i>
+		</button>
+	</div>
 	<div id="totalFichas" class="fichasplayer">
 		<img src="/Lobby/img/dolar.png" alt="" height="30">
 		<p id="fichas-cantidad"> </p>
@@ -143,6 +148,27 @@
 				</label>
 				<input type="submit" name="registrePregunta" id="buttonRegistrePregunta" value="Registrar">
 				<button id="cerrarModalSug" type="button">X</button> 
+			</div>
+		</div>
+
+		<div class="podiouser-content">
+			<div class="podiouser" id="podiouser">
+				<h3>Clasificatorio</h3>
+				<div class="forms-user">
+					<table>
+						<thead>
+							<tr>
+								<th>Posicion</th>
+								<th>Nombre</th>
+								<th>Fichas</th>
+							</tr>
+						</thead>
+						<tbody class="userList">
+							
+						</tbody>
+					</table>
+				</div> 
+				<button id="cerrarModalRank" type="button">X</button> 
 			</div>
 		</div>
 		
