--- a/Control/MostrarPreguntas/listadoPreguntas.html
+++ b/Control/MostrarPreguntas/listadoPreguntas.html
@@ -15,18 +15,20 @@
     <title>Preguntas</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              <a class="nav-link" href="/Control/PanelControl/PanelControl.html">Ingresar preguntas</a>
-              <a class="nav-link" href="/Control/MostrarPreguntas/listadoPreguntas.html">Listar preguntas categoria</a>
-              <a class="nav-link" href="/LoginQuiz/loginQuiz.html">Salir</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="/Control/InicioControl/control.html">Inicio</a>
+          <a class="nav-link" href="/Control/PanelControl/PanelControl.html">Ingresar preguntas</a>
+          <a class="nav-link" href="/Control/MostrarPreguntas/listadoPreguntas.html">Listar preguntas categoria</a>
+          <a class="nav-link" href="/Control/ControlUsuarios/usuer.html">Usuarios</a>
+          <a class="nav-link" href="/Control/Sugerencias/sugerencias.html">Sugerencias Preguntas</a>
+          <a class="nav-link" href="/index.html">Salir</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
     <div class="buscardor d-flex justify-content-center">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
