--- a/PAGINA/preguntas.html
+++ b/PAGINA/preguntas.html
@@ -19,7 +19,9 @@
   <button class="ov-btn-grow-ellipse" id="regresarLobby">
     Volver
   </button>
-
+  <audio id="audio" src="/Lobby/aud/beta.mp3" loop></audio>
+  <button class="audButton" id="toggleButton"><img id="controller-aud" src="/Lobby/img/volume-full-regular-24.png"
+    alt=""></button>
   <div id="usuario" class="name-player"></div>
   <div id="totalFichas" class="fichasplayer">
     <img src="/Lobby/img/dolar.png" alt="" height="30">
