--- a/Lobby/index.html
+++ b/Lobby/index.html
@@ -29,6 +29,16 @@
 	<div id="name-player" class="name-players">
 		<h1></h1>
 	</div>
+	<div class="sugerencias">
+		<button class="sug" id="sugModal">
+			<i class="bx">Sugerencia Pregunta</i>
+		</button>
+	</div>
+	<div class="punteo">
+		<button class="ran" id="rankingPoint">
+			<i class="bs">Ranking</i>
+		</button>
+	</div>
 	<div id="totalFichas" class="fichasplayer">
 		<img src="/Lobby/img/dolar.png" alt="" height="30">
 		<p id="fichas-cantidad"> </p>
@@ -38,10 +48,8 @@
 	<button class="audButton" id="toggleButton"><img id="controller-aud" src="/Lobby/img/volume-full-regular-24.png"
 			alt=""></button>
 	<div class="contenedor">
-
-		<div class="contenedor">
+		<div class="contenedores">
 			<h1>QUIZ MASTER</h1>
-
 			<div class="contenedor-botones">
 				<button class="boton uno" id="Historia">
 					<div class="icono">
@@ -103,17 +111,13 @@
 					</div>
 					<span>BIOLOGIA</span>
 				</button>
-				<button class="boton siete" id="Randon">
-					<div class="icono">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-arrow-right-short" viewBox="0 0 16 16">
-							<path fill-rule="evenodd"
-								d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
-						</svg>
-					</div>
-					<span>Modo Aleatorio</span>
-				</button>
+				
 			</div>
+		</div>
+		<div class="modorandom">
+			<button class="boton siete" id="Randon">
+				<span>Modo aleatorio</span>
+			</button>
 		</div>
 		<div id="modal" class="modal">
 			<div class="modal-contenido">
@@ -124,6 +128,50 @@
 				<button class="dificultad" id="Dificil">Difícil</button>
 			</div>
 		</div>
+		<div class="modal-content">
+			<div class="modalSug" id="modalSug">
+				<h3>Ingrese la pregunta con su respectiva respuesta</h3>
+				<label>
+					<input type="text" class="textbox" name="pregunta" id="preguntarregis" placeholder="Ingrese la pregunta">
+				</label>
+				<label>
+					<input type="text" name="respuesta" id="respuestaregis" placeholder="Ingrese la respuesta">
+				</label>
+				<label>
+					<input type="text" name="categoria" id="categoria" placeholder="Categoria de la pregunta">
+				</label>
+				<label>
+					<input type="text" name="subcategoria" id="subcategoria" placeholder="Subcategoria de la pregunta">
+				</label>
+				<label>
+					<input type="text" name="dificultad" id="niveldificultadregis" placeholder="Ingrese el nivel de dificultad">
+				</label>
+				<input type="submit" name="registrePregunta" id="buttonRegistrePregunta" value="Registrar">
+				<button id="cerrarModalSug" type="button">X</button> 
+			</div>
+		</div>
+
+		<div class="podiouser-content">
+			<div class="podiouser" id="podiouser">
+				<h3>Clasificatorio</h3>
+				<div class="forms-user">
+					<table>
+						<thead>
+							<tr>
+								<th>Posicion</th>
+								<th>Nombre</th>
+								<th>Fichas</th>
+							</tr>
+						</thead>
+						<tbody class="userList">
+							
+						</tbody>
+					</table>
+				</div> 
+				<button id="cerrarModalRank" type="button">X</button> 
+			</div>
+		</div>
+		
 </body>
 
 </html>
